<resources>
    <string name="app_name">Foodiction</string>
    <string name="title">Foodiction</string>
    <string name="add_recipe_activity_title">Add Recipe</string>
    <string name="from_image_btn_txt">From Image</string>
    <string name="create_recipe_btn_txt">Create</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_add_recipe">AddRecipeActivity</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search Recipe</string>
    <string name="more">More</string>
    <string name="content_description_more">More options</string>
    <string name="content_description_favorite">favorites</string>
    <string name="content_description_media">media</string>
    <string name="secondary_text">secondary_text</string>
    <string name="supporting_text">supporting_text</string>
    <string name="action_1">action_1</string>
    <string name="action_2">action_2</string>
    <string name="add_to_favorite">add_to_favorite</string>
    <string name="recipe_title">Recipe_Title</string>
    <string name="manu">manu</string>
    <string name="content_description_manu">manu</string>
    <string name="recipe_description">recipe_description</string>
    <string name="recipe_making_time">recipe_making_time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="threeItem">item3</string>
    <string name="twoItem">item2</string>
    <string name="oneItem">item1</string>
    <string name="header_title">header_title</string>
    <string name="header_text">header_text</string>
    <string name="appbar_title">Recipes</string>
    <string name="navigation_drawer_open">open navigation Drawer</string>
    <string name="navigation_drawer_close">close navigation Drawer</string>
    <string name="food_types">Food Types</string>
    <string name="foodTypeitalian">Italian</string>
    <string name="foodTypeasia">Asia</string>
    <string name="foodTypemeat">Meat</string>
    <string name="foodTypehomecooking">Home Cooking</string>
    <string name="foodTypefish">Fish</string>
    <string name="foodTypesalad">Salads</string>
    <string name="foodTypeindian">Indian</string>
    <string name="foodTypesoup">Soups</string>
    <string name="foodTypesandwich">Sandwiches</string>
    <string name="foodTypedessert">Desserts</string>
    <string name="foodTypepastries">Pastries</string>
    <string name="profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="appbar_profile_title">Profile</string>
    <string name="appbar_settings_title">Settings</string>
    <string name="homePage">Recipes</string>
    <string name="default_timer">00:00</string>
    <string name="no_ingredients_chosen">Add ingredients</string>
    <string name="filter">filter</string>
    <string name="filterButton">filterButton</string>
    <string name="favorite">Favorites</string>
    <string name="info">Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Steps</string>
    <string name="description_placeholder">Description Text</string>
    <string name="amount_placeholder">amount</string>
    <string name="from_internet_btn_text">From internet</string>
</resources>
