<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:theme="@style/Theme.RecipeCardView">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <!-- Media -->

        <ImageView
            android:contentDescription="@string/content_description_media"
            android:id="@+id/RecipeImage"
            android:layout_height="194dp"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_food_picture" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/RecipeTitle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/recipe_title"
                android:textSize="25dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/description"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:text="@string/recipe_description"
                android:textSize="20dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/makingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/recipe_making_time"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:drawableLeft="@drawable/ic_baseline_recipe_timer_24"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:textSize="20dp"/>

        </LinearLayout>

        <!-- Buttons -->
        <RelativeLayout
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/single_recipe_type_indicator"
                style="@style/recipe_card_web_icon"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentLeft="true"/>

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:gravity="center"
                android:id="@+id/single_recipe_add_to_fav_button"
                android:layout_gravity="center"
                android:layout_height="44dp"
                android:layout_width="44dp"
                app:icon="@drawable/ic_baseline_favorite_border_24"
                app:iconTint="@color/favoriteButton"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:layout_toLeftOf="@id/single_recipe_delete_button"/>

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:layout_alignParentRight="true"
                android:id="@+id/single_recipe_delete_button"
                android:layout_gravity="center"
                android:layout_height="44dp"
                android:layout_width="44dp"
                app:icon="@drawable/delete_recipe_24"
                app:iconTint="@color/deleteButton"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>