<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#9FFFFEFD"
    tools:context=".RecipePageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/recipePageAppBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@+id/tabLayoutRecipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/Recipe_Image_Page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="pin"
                app:layout_constraintBottom_toTopOf="@+id/tabLayoutRecipe"
                app:srcCompat="@drawable/ic_food_picture" />

            <TextView
                android:id="@+id/Recipe_Name_Page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/name_background"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:shadowColor="#FFFFFF"
                android:shadowRadius="10"
                android:text="Recipe name"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_collapseMode="pin"
                tools:ignore="RtlCompat" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/recipe_page_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin" />


            <!--            android:background="@null"-->
            <!--            android:elevation="1dp"-->
            <!--            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
            <!--            app:layout_scrollFlags="scroll|enterAlways|snap"-->
            <!--            app:menu="@menu/upper_app_bar"-->
            <!--            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"-->
            <!--            app:titleTextColor="@color/black"-->
            <!--            app:title="@string/appbar_title"-->


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="526dp"
        android:outlineProvider="background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipePageAppBarLayout">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

    </com.google.android.material.tabs.TabLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/recipe_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>